improve addon approval tab

--- a/app/templates/publish/edit.twig
+++ b/app/templates/publish/edit.twig
@@ -17,206 +17,31 @@
 		<div class="alert alert-danger">{% trans %}Javascript needs to be activated in order to edit addons and releases.{% endtrans %}</div>
 		</noscript>
 		<ul class="nav nav-tabs" id="editAddonTabs">
-			<li class="active"><a href="#addon" data-toggle="tab">{% trans "Addon" %}</a></li>
+			<li class="active"><a href="#basic" data-toggle="tab">{% trans "Addon" %}</a></li>
 			<li><a href="#presentation" data-toggle="tab">{% trans "Presentation" %}</a></li>
 			<li><a href="#approval" data-toggle="tab">{% trans "Approval" %}</a></li>
 			<li><a href="#releases" data-toggle="tab">{% trans "Releases" %}</a></li>
 		</ul>
 		<div class="tab-content">
-			<div class="tab-pane active" id="addon">
-				<form role=form" method="post" action="{{filename}}#addon">
-					<input type="hidden" name="addon-form">
-					<input type="hidden" name="state" value="{{state}}">
-					{% include 'functions/alert.twig' with {'selector' : 'addon'} %}
-					<div class="row">
-						<div class="col-lg-4">
-							<div class="form-group">
-								<label for="title">{% trans "Title" %}</label>
-								<input type="text" class="form-control" name="title" id="title" value="{{addontitle}}" required {% if released %}disabled{% endif%}>
-							</div>
-							<div class="form-group">
-								<label for="type">{% trans "Type" %}</label>
-								<select name="type" class="form-control" id="type" required {% if released %}disabled{% endif%}>
-									<option value="123">Runde</option>
-									<option value="312">Objektpaket</option>
-								</select>
-							</div>
-							<div class="form-group">
-								<label for="type">{% trans "Game" %}</label>
-								<select name="game" class="form-control" id="type" required {% if released %}disabled{% endif%}>
-									{% for short, currentgame in games %}
-										<option value="{{short}}"{% if short == game %} selected{% endif %}>{{currentgame.title}}</option>
-									{% endfor %}
-								</select>
-							</div>
-						</div>
-						<div class="col-lg-4">
-							<div class="form-group">
-								<label for="title">{% trans "Abbreviation" %}</label>
-								<input type="text" class="form-control" name="abbreviation" id="title" value="{{abbreviation}}" {% if released %}disabled{% endif%}>
-								<span class="help-block">{% trans %}Only enter a well-known abbreviation.{% endtrans %}</span>
-							</div>
-						</div>
-					</div>
-					<div class="form-group">
-						<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
-						<span class="btn" disabled>{% trans %}These settings cannot be changed once the first release has been published.{% endtrans %}</span>
-						<a href="#" class="btn btn-danger pull-right">{% trans %}Remove addon{% endtrans %}</a>
-					</div>
-				</form>
-			</div>
-
-			<div class="tab-pane" id="dependencies">
-				<form role=form" method="post" action="{{filename}}">
-					<input type="hidden" name="dependencies-form">
-					<div class="row">
-						<div class="col-md-4">
-							<div class="form-group">
-								<label for="depencencies">{% trans %}Dependencies{% endtrans %}</label>
-							</div>
-						</div>
-					</div>
-				</form>
+			<div class="tab-pane active" id="basic">
+				{% include "publish/edit/basic.twig" %}
 			</div>
 
 			<div class="tab-pane" id="presentation">
-				<form role=form" method="post" action="{{filename}}#presentation" name="test">
-					<input type="hidden" name="presentation-form">
-					<input type="hidden" name="state" value="{{state}}">
-					{% include 'functions/alert.twig' with {'selector' : 'presentation'} %}
-					<div class="row">
-						<div class="col-md-8">
-							<!--<div class="col-sm-3">
-								<div class="form-group">
-									<label for="title">{% trans "Title image" %}</label>
-									<img class="media-object" src="http://placehold.it/76x57" width="76" height="57">
-									<button class="btn btn-default"><span class="glyphicon glyphicon-search"></span> {% trans %}Select{% endtrans %}</button>
-								</div>
-							</div>
-							<div class="col-sm-9">
-								<div class="form-group">
-									<label for="introduction">{% trans "Sitewide intro" %}</label>
-									<textarea class="form-control" id="introduction" name="introduction" rows="2" placeholder="{% trans %}Short intro text, will be used around the site alongside the title image.{% endtrans %}">{{introduction}}</textarea>
-								</div>
-							</div>!-->
-							<div class="form-group">
-								<label for="description">{% trans "Description" %}</label>
-								<textarea class="form-control" id="description" name="description" rows="6" placeholder="{% trans %}Explain the general idea behind this addon.{% endtrans %}">{{description}}</textarea>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="form-group">
-								<label for="website-url">{%trans "Website" %}</label>
-								<input type="text" class="form-control" name="website-url" id="website-url" value="{{website}}" placeholder="http://clonkforge.net/pr.php?pr=">
-							</div>
-							<div class="form-group">
-								<label for="bugtracker-url">{%trans "Bugtracker" %}</label>
-								<input type="text" class="form-control" name="bugtracker-url" id="bugtracker-url" value="{{bugtracker}}" placeholder="http://clonkforge.net/bugtrack.php?prj=">
-							</div>
-						<!--<input type="hidden" name="state" value="{{state}}">
-							<div class="form-group">
-								<label for="type">{% trans "Supported player counts" %}</label>
-								<div class="checkbox">
-									<label><input type="checkbox"> Single player (a single player can/has to do something)</label>
-								</div>
-								<div class="checkbox">
-									<label><input type="checkbox"> Cooperative (all players have too solve a riddle or kill a boss)</label>
-								</div>
-								<div class="checkbox">
-									<label><input type="checkbox"> Free for all (only one player can win)</label>
-								</div>
-								<div class="checkbox">
-									<label><input type="checkbox"> Multiple teams (teams win)</label>
-								</div>
-							</div>
-							<div class="form-group">
-								<label for="type">{% trans "Goal" %}</label>
-								<select name="type" class="form-control" id="type">
-									<option value="" disabled selected>{% trans "Choose&hellip;"%}</option>
-									<option value="adventure">Adventure</option>
-									<option value="melee">Melee</option>
-									<option value="settlement">Settlement</option>
-									<option value="various">Various</option>
-								</select>
-							</div>!-->
-						</div>
-					</div>
-					<div class="form-group">
-						<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
-						<span class="btn" disabled>{% trans %}The presentation can be changed anytime and affects all releases.{% endtrans %}</span>
-					</div>
-				</form>
+				{% include "publish/edit/presentation.twig" %}
 			</div>
-					
+
 			<div class="tab-pane" id="approval">
-				{% if approved %}
-				<div class="alert alert-success">{% trans %}This addon was approved. Releases can now be published at any time.{% endtrans %}</div>
-				{% else %}
-				<div class="alert alert-warning">{% trans %}This addon needs to be approved by a moderator. Releases can be published freely after approval.{% endtrans %}</div>					
-				{% endif %}
-				<div class="row">
-					<div class="col-md-4">
-						<div class="form-group">
-							<label for="namespace">{% trans "Namespace" %}</label>
-							<input type="text" class="form-control" name="namespace" id="namespace" value="{{namespace}}" placeholder="{{namespace_proposal}}" {% if approved %}disabled{% endif%}>
-						</div>
-					</div>
-					<div class="col-md-8">
-						<h4>Choose a namespace</h4>
-						<p>The namespace will be used as a unique identifier for your addon and its releases.</p>
-					</div>
-				</div>
-				<div class="form-group">
-					<button class="btn btn-success">{% trans %}Submit for approval{% endtrans %}</button>
-				</div>
+				{% include "publish/edit/approve.twig" %}
 			</div>
 
 			<div class="tab-pane" id="releases">
-				<div class="row">
-					<div class="col-md-12">
-						<label for="version">{% trans "New release" %}</label>
-						<form role=form" class="form-inline" method="post" action="{{filename}}#releases">
-							<input type="hidden" name="release-form">
-							<input type="hidden" name="state" value="{{state}}">
-							{% include 'functions/alert.twig' with {'selector' : 'release'} %}
-							<div class="form-group">
-								<label class="sr-only" for="version	">{% trans "Version"%}</label>
-								<input type="text" class="form-control" name="version" id="version" value="{{version}}" placeholder="1.0b"{% if focus_version %} autofocus{% endif %} required>
-							</div>
-							<button type="submit" class="btn btn-success" name="release-submit">{% trans %}Add release{% endtrans %}</button>
-							<span class="help-block">{% trans %}Releases are invisible until you publish them.{% endtrans %}</span>
-						</form>
-						<p></p>
-						<label for="type">{% trans "Existing releases" %}</label>
-						<div class="list-group">
-							{% for release in releases %}
-								<a class="list-group-item" href="{{base}}/publish/{{addonid}}/{{release.version}}">
-									{% set version = release.version %}
-									<strong>{{addontitle}}</strong>
-									{% include 'functions/labels/version.twig' with {'version' : version} %}
-									{% if release.released %}
-										{% if release.latest %}
-											{% include "functions/labels/latest.twig" %}
-										{% endif %}
-									{% else %}
-										{% if release.scheduled %}
-											{% include "functions/labels/scheduled.twig" %}
-										{% else %}
-											{% include "functions/labels/unreleased.twig" %}
-										{% endif %}
-									{% endif %}
-								</a>
-								{% else %}
-									<span class="list-group-item text-muted">{% trans %}No release created{% endtrans %}</span>
-									{% endfor %}
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				{% endblock %}
+				{% include "publish/edit/releases.twig" %}
+			</div>
+		</div>
+	</div>
+{% endblock %}
 
-					{% block javascript %}
-						$('.tab-pane form').areYouSure({'message':translation.unsavedChanges});
-					{% endblock %}
+{% block javascript %}
+	$('.tab-pane form').areYouSure({'message':translation.unsavedChanges});
+{% endblock %}
