various tweaks to addon edit pages

--- a/app/templates/functions/labels/unpublished.twig
+++ b/app/templates/functions/labels/unpublished.twig
@@ -1,4 +1,4 @@
 {% extends 'functions/labels/label.twig' %}
 
 {% block class %}label-default{% endblock %}
-{% block title %}{% trans %}Unreleased{% endtrans %}{% endblock %}
+{% block title %}{% trans %}Unpublished{% endtrans %}{% endblock %}
