--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -199,6 +199,10 @@ label.btn {
 	margin-top: -1px;
 }
 
+.panel-body p:last-child {
+	margin-bottom: 0px;
+}
+
 h1 a, h1 a:hover, h1 a:active, .lead a, .lead a:hover, .lead a:active {
 	color: inherit;
 	text-decoration: none;
