improve welcome email

--- a/app/templates/email/welcome.twig
+++ b/app/templates/email/welcome.twig
@@ -8,7 +8,11 @@
 <p>{% trans %}Although this project is still in development, thank you for helping us test the platform.{% endtrans %}<br>
 {% trans %}If you'd like to learn more about the project or Clonk visit the about pages at the bottom of the site.{% endtrans %}</p>
 
-<p>{% trans %}You can report any feedback you have on the contact page at {{contact}}. Let's make {{brand}} something awesome.{% endtrans %}</p>
+<p>{% trans %}{{brand}} works a bit differently compared to other download sites. In order to publish a scenario or pack you first need to create a corresponding addon.{% endtrans %}<br>
+{% trans %}The addons tracks general information, like the title, an introduction and which game it belongs to. You can then create a release for the addon, which has a version number, a detailed description and tracks the actual files.{% endtrans %}<br>
+{% trans %}Once you have created a release you can publish it. When players search for your addon, they will always be pointed to the latest release.{% endtrans %}</p>
+
+<p>{% trans %}You can send us any feedback you have on the contact page at {{contact}}. Let's make {{brand}} a useful and awesome site.{% endtrans %}</p>
 
 <p>{% trans %}Once again, thank you for testing {{brand}}!{% endtrans %}</p>
 
