fix string on addon approve page

--- a/app/templates/publish/edit/approve.twig
+++ b/app/templates/publish/edit/approve.twig
@@ -26,7 +26,7 @@
 		<div class="panel panel-danger">
 			<div class="panel-heading">{% trans %}Addon rejected{% endtrans %}</div>
 			<div class="panel-body">
-				<p>{% trans %}Sorry, this addon was rejected. You can improve this addon and submit it again.{% endtrans %}</p>
+				<p>{% trans %}Sorry, this addon was rejected. You can improve the addon and submit it again.{% endtrans %}</p>
 				{{approval_comment}}
 			</div>
 		</div>
