--- a/app/templates/manage/moderation.twig
+++ b/app/templates/manage/moderation.twig
@@ -11,10 +11,9 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-4">
-				<h2>{% trans %}Overview{% endtrans %}</h2>
-				<h3>{% trans %}Users{% endtrans %}</h3>
-				<a href="{{base}}/users" class="btn btn-default">{% trans %}Users{% endtrans %}</a>
-				<a href="{{base}}/users?filter=bans" class="btn btn-danger">{% trans %}Banned{% endtrans %}</a>
+				<h2>{% trans %}Users{% endtrans %}</h2>
+				<a href="{{base}}/users" class="btn btn-default">{% trans %}User list{% endtrans %}</a>
+				<a href="{{base}}/users?filter=bans" class="btn btn-danger">{% trans %}Banned users{% endtrans %}</a>
 			</div>
 			<div class="col-md-8">
 				<h2>{% trans %}Queues{% endtrans %}</h2>
