--- a/app/templates/account/settings.twig
+++ b/app/templates/account/settings.twig
@@ -52,10 +52,8 @@
 						<input type="email" class="form-control" name="email" id="email" value="{{email}}" required{% if focus_email %} autofocus{% endif %}>
 					</div>
 					<div class="form-group">
-						{% if activated %}
-							<button type="submit" class="btn btn-default">{% trans "Confirm email address" %}</button>
-						{% else %}
-							<button type="submit" class="btn btn-default">{% trans "Change email address" %}</button>
+						<button type="submit" class="btn btn-default">{% trans "Change email address" %}</button>
+						{% if not activated %}
 							<button type="submit" class="btn btn-warning" name="resend">{% trans "Resend confirmation" %}</button>
 						{% endif %}
 					</div>
