fix and add some text and links

--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -53,7 +53,7 @@
 					<dd>by <a href="https://github.com/resque/resque/graphs/contributors">Team Resque</a> / <a href="http://chrisboulton.com/">Chris Boulton</a>,</dd>					
 					<dt><a href="http://lesscss.org/">Less</a></dt>
 					<dd>by <a href="https://github.com/cloudhead">Alexis Sellier</a> and <a href="http://lesscss.org/about/#team">contributors</a>,</dd>
-					<dt><a href="https://code.google.com/p/lightopenid/">LightOpenID</a> / <a href="http://lesscss.org/">OAuth 2.0 Client</a></dt>
+					<dt><a href="https://code.google.com/p/lightopenid/">LightOpenID</a> / <a href="https://github.com/thephpleague/oauth2-client">OAuth 2.0 Client</a></dt>
 					<dd>by <a href="https://code.google.com/u/103055401176250561450/">lightopenid author</a> / <a href="http://thephpleague.com/">the PHP League</a>,</dd>
 					<dt><a href="https://github.com/jbroadway/analog/">Analog</a></dt>
 					<dd>by <a href="https://github.com/jbroadway">Johnny Broadway</a>.</dd>
