--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -203,7 +203,7 @@ label.btn {
 	margin-bottom: 0px;
 }
 
-h1 a, h1 a:hover, h1 a:active, .lead a, .lead a:hover, .lead a:active {
+h1 a, h1 a:hover, h1 a:active, a.muted, a.muted:hover, a.muted:active {
 	color: inherit;
 	text-decoration: none;
 }
