--- a/app/templates/account/login.twig
+++ b/app/templates/account/login.twig
@@ -56,11 +56,11 @@
 			<div class="col-md-8">
 				<hr class="visible-xs">
 				<h2>{% trans %}Welcome back!{% endtrans %}</h2>
-				<p class="lead">{% trans %}Nice to see you again. {% endtrans %}</p>
+				<p class="lead">{% trans %}It's great to see you again.{% endtrans %}</p>
 				<hr>
 				<h3>{% trans %}No account yet?{% endtrans %}</h3>
 				<p>{% trans %}Registering takes only a few moments and allows you to participate in the Clonk community.{% endtrans %}</p>
-				<p><a href="{{base}}/register{% if returnto %}?returnto={{returnto}}{% endif %}" class="btn btn-md btn-success">{% trans %}Register now{% endtrans %}</a></p>
+				<p><a href="{{base}}/register{% if returnto %}?returnto={{returnto}}{% endif %}" class="btn btn-lg btn-success">{% trans %}Register now{% endtrans %}</a></p>
 			</div>
 		</div>
 	</div>
