fix missing apostrophy (thanks Luchs!)

--- a/app/templates/site/privacy.twig
+++ b/app/templates/site/privacy.twig
@@ -24,10 +24,11 @@
 		</ul>
 		<h2>{% trans %}Transparency{% endtrans %}</h2>
 		{% set public %}<a href="https://github.com/clonklorry/clonklorry">{% trans %}public{% endtrans %}</a>{% endset %}
-		<p>{% trans %}Lorrys source code is {{public}}, so you can check all of this yourself. If you have further questions concerning your privacy, please do not hesitate to contact us.{% endtrans %}<p>
+		<p>{% trans %}Lorry's source code is {{public}}, so you can check all of this yourself. If you have further questions concerning your privacy, please do not hesitate to contact us.{% endtrans %}<p>
 		<p>{% trans %}Our systems are hosted by Uberspace, a hoster with an (in our opinion) excellent privacy policy.{% endtrans %}</p>
 		<p>
 			<a href="{{base}}/contact" class="btn btn-primary">{% trans %}Contact us{% endtrans %}</a>
 			<a href="https://uberspace.de/privacy" class="btn btn-default">{% trans %}Uberspace privacy policy{% endtrans %}</a>
+		</p>
 	</div>
 {% endblock %}
