--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -192,11 +192,24 @@ label.btn {
 	width: 50%;
 }
 
+.btn-group {
+	width: 100%;
+}
+
+.btn-group label img {
+	margin: 0 auto;
+}
+
 .tab-pane {
 	background-color: white;
 	border: 1px solid #ddd;
 	padding: 20px 20px 5px 20px;
 	margin-top: -1px;
+}
+
+.row.vertical-align {
+    display: flex;
+    align-items: center;
 }
 
 .panel-body p:last-child {
@@ -206,6 +219,12 @@ label.btn {
 h1 a, h1 a:hover, h1 a:active, a.muted, a.muted:hover, a.muted:active {
 	color: inherit;
 	text-decoration: none;
+}
+
+h5 {
+	font-size: 14px;
+	font-weight: bold;
+	margin: 0 0 6px 0;
 }
 
 .resumable-progress {
