--- a/app/templates/publish/create.twig
+++ b/app/templates/publish/create.twig
@@ -12,21 +12,11 @@
 		<form role=form" method="post" action="{{filename}}">
 			<input type="hidden" name="state" value="{{state}}">
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-5">
 					{% include 'functions/alert.twig' with {'selector' : 'creation'} %}
 					<div class="form-group">
 						<label for="title">{% trans "Title" %}</label>
-						<input type="text" class="form-control" name="title" id="title" value="{{addontitle}}" placeholder="{{exampletitle}}" required{% if not title_valid %} autofocus{% endif %}>
-						<span class="help-block">{% trans %}The title should be descriptive and unique.{% endtrans %}</span>
-					</div>
-					<div class="form-group">
-						<label for="type">{% trans "Type" %}</label>
-						<select name="type" class="form-control" id="type" required>
-							<option value="" disabled{% if not type %} selected{% endif %}>{% trans "Choose&hellip;"%}</option>
-							<option value="scenario"{% if type == 'scenario' %} selected{% endif %}>{% trans "Scenario" %}</option>
-							<option value="pack"{% if type == 'pack' %} selected{% endif %}>{% trans "Pack" %}</option>
-						</select>
-						<span class="help-block">{% trans %}Scenarios should only be a single file.{% endtrans %}</span>
+						<input type="text" class="form-control input-lg" name="title" id="title" value="{{addontitle}}" placeholder="{{exampletitle}}" required{% if not title_valid %} autofocus{% endif %}>
 					</div>
 					<div class="form-group">
 						<label for="game">{% trans "Game" %}</label>
@@ -40,9 +30,13 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<span class="help-block">{% trans %}All settings can be changed before publishing.{% endtrans %}</span>
 						<button type="submit" class="btn btn-lg btn-success">{% trans "Create addon" %}</button>
 					</div>
+				</div>
+				<div class="col-md-7">
+					<h2>{% trans %}You have an awesome idea?{% endtrans %}</h2>
+					<p class="lead">{% trans %}Whether it's magic caves or exploding Wipfs, {{brand}} is the place to publish all your addons.{% endtrans %}</p>
+					<p class="help-block">{% trans %}No Wipfs were harmed in the development of {{brand}}.{% endtrans %}</p>
 				</div>
 			</div>
 		</form>
