add file count bade to release page

--- a/app/templates/publish/release.twig
+++ b/app/templates/publish/release.twig
@@ -32,7 +32,7 @@
 		</noscript>
 		<ul class="nav nav-tabs" id="editAddonTabs">
 			<li class="active"><a href="#basic" data-toggle="tab">{% trans "Release" %}</a></li>
-			<li><a href="#files" data-toggle="tab">{% trans "Files" %}</a></li>
+			<li><a href="#files" data-toggle="tab">{% trans "Files" %} <span id="resumable-files-count" class="badge"></span></a></li>
 			<li><a href="#dependencies" data-toggle="tab">{% trans "Dependencies" %}</a></li>
 			<li><a href="#changes" data-toggle="tab">{% trans "Changes" %}</a></li>
 			<li><a href="#publish" data-toggle="tab">{% trans "Publish" %}</a></li>
