better upload resuming

--- a/app/templates/publish/edit/release/files.twig
+++ b/app/templates/publish/edit/release/files.twig
@@ -16,6 +16,7 @@
 	<div id="resumable">
 		<span id="message-text-reselect" class="hidden">{% trans %}Select file to continue upload{% endtrans %}</span>
 		<span id="message-text-uploaded" class="hidden">{% trans %}Ready to publish{% endtrans %}</span>
+		<span id="message-text-continue" class="hidden">{% trans %}Can be continued{% endtrans %}</span>
 		<span id="message-text-remove" class="hidden">{% trans %}Remove{% endtrans %}</span>
 		<span id="message-text-confirm-remove" class="hidden">{% trans %}Are you sure you want to remove this file?{% endtrans %}</span>
 		<span id="message-text-remove-failed" class="hidden">{% trans %}File could not be removed.{% endtrans %}</span>
