--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -6,7 +6,7 @@
 	<div class="page-header">
 		<div class="container">
 			<h1>{{title}}</h1>
-			<p class="lead">{% trans %}The Lorry project is a fan site for the video game Clonk.{% endtrans %}</p>
+			<p class="lead">{% trans %}The Lorry project is a fan site for the video game Clonk.{% endtrans %} <a href="https://github.com/clonklorry/clonklorry">{% trans %}View on GitHub&hellip;{% endtrans %}</a></p>
 		</div>
 	</div>
 	<div class="container">
