--- a/app/templates/addon/game.twig
+++ b/app/templates/addon/game.twig
@@ -4,7 +4,7 @@
 	<div class="page-header">
 		<div class="container">
 			{% if addons %}<img src="{{resources}}/custom/game/{{short}}.png" class="pull-right hidden-xs" alt="{% trans %}{{game}} logo{% endtrans %}">{% endif %}			
-			<h1>{% if not user_login %}<small class="pull-right"><a href="{{base}}/clonk">{% trans %}About Clonk{% endtrans %}</a></small>{% endif %}{{title}}</h1>
+			<h1>{{title}}</h1>
 		</div>
 	</div>
 	{% if addons %}
