tweak string on login page

--- a/app/templates/account/login.twig
+++ b/app/templates/account/login.twig
@@ -58,7 +58,7 @@
 				<h2>{% trans %}Welcome back!{% endtrans %}</h2>
 				<p class="lead">{% trans %}It's great to see you again.{% endtrans %}</p>
 				<hr>
-				<h3>{% trans %}No account yet?{% endtrans %}</h3>
+				<h3>{% trans %}Not registered yet?{% endtrans %}</h3>
 				<p>{% trans %}Registering takes only a few moments and allows you to participate in the Clonk community.{% endtrans %}</p>
 				<p><a href="{{base}}/register{% if returnto %}?returnto={{returnto}}{% endif %}" class="btn btn-lg btn-success">{% trans %}Register now{% endtrans %}</a></p>
 			</div>
